deploy-openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: export-app-deploy
  labels:
    app: export-app 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: export-app
  template:
    metadata:
      labels:
        app: export-app
    spec: 
      serviceAccountName: export-app-sa
      containers:
        - name: export-app-deploy
          image: jduimovich/export-app    
          resources:
            limits:
              cpu: "300m"
              memory: "1024Mi"
            requests:
              cpu: "300m"
              memory: "1024Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
