deploy-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: export-app-service
  labels:   
    app: export-app-service
  annotations:
    export.app.control/prune: "true"   
spec:
  selector:
    app: export-app
  ports:
  - port: 8080
    targetPort: 8080
