deploy-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: export-app 
  labels:  
    app: export-app-service
  annotations:
    export.app.control/prune: "true"   
spec: 
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: export-app-service  
    weight: 100
